--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
+async-trait = "0.1"
