--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
 async-trait = "0.1"
+schemars = "0.8"
 toml = "0.8"
