fix: add contents:write permissions to release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,14 @@ on:
     tags:
       - 'v*'
 
+permissions:
+  contents: write
+
+jobs:
+  push:
+    tags:
+      - 'v*'
+
 jobs:
   build-and-upload:
     name: Build and upload for ${{ matrix.os }}
