feat: unify storage logic and implement theme-prefixed filenames

--- a/assets/config.toml
+++ b/assets/config.toml
@@ -1,17 +1,13 @@
 #:schema https://raw.githubusercontent.com/shlroland/wallow/master/wallow.schema.json
 
 # wallow 默认配置文件
-
-# wallow 默认配置文件
-# 路径: ~/.config/wallow/config.toml
 # 路径: ~/.config/wallow/config.toml
 
 [common]
-# 壁纸保存的根目录 (支持相对路径或绝对路径)
-wallpaper_dir = "wallpapers"
-
-# 定时任务 (schedule) 下载的壁纸存放目录
-schedule_dir = "wallpapers/schedule"
+# 壁纸保存的根目录
+# 支持绝对路径，相对路径则相对于 $HOME (家目录)
+# 默认值: "Pictures/wallow"
+# wallpaper_dir = "Pictures/wallow"
 
 [common.search]
 # 默认搜索关键词 (None 表示不限)
