feat: support query as array for random selection
- Add StringOrVec enum to support both string and array query config
- Add rand dependency for random selection
- When query is array, randomly pick one on each fetch/run
- Update docs in README.md and assets/config.toml

Example:
  query = "nature"                    # single keyword
  query = ["nature", "anime", "cyberpunk"]  # random pick

--- a/assets/config.toml
+++ b/assets/config.toml
@@ -30,9 +30,11 @@
 # theme = "catppuccin"
 
 [common.search]
-# 默认搜索关键词 (不设置则不限)
+# 默认搜索关键词，支持字符串或数组
+# 单个关键词: query = "nature"
+# 多个关键词（随机选择）: query = ["nature", "anime", "landscape", "cyberpunk"]
+# 不设置则不限
 # query = "nature"
-
 # 默认分辨率
 resolution = "3840x2160"
 
